<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/find_item"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/find"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/location_item"
        android:icon="@drawable/ic_my_location_black_24dp"
        android:title="@string/my_location"
        app:showAsAction="ifRoom|withText"/>
</menu>